tests/stage3/semantic_import_group_call_arg_count_extra.imp
module app.main

import app.main.{id as alias}

function id(a: i32) -> i32 {
    return a
}

function main() {
    print(alias(1, 2))
}
